correct links for recipes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/odin-recipes/baked-spaghetti.html">Baked-spaghetti</a>
-        <a href="recipes/odin-recipes/nectarine.html">nectarine sunshine juice</a>
-        <a href="recipes/odin-recipes/rice.html">smoked sausage and cauliflower rice</a>
+        <a href="recipes/baked-spaghetti.html">Baked-spaghetti</a>
+        <a href="recipes/nectarine.html">nectarine sunshine juice</a>
+        <a href="recipes/rice.html">smoked sausage and cauliflower rice</a>
     </body>
 </html>
