add heading and list

--- a/recipes/baked-spaghetti.html
+++ b/recipes/baked-spaghetti.html
@@ -7,11 +7,12 @@
     <title>A baked-spaghetti recipe</title>
 </head>
 <body>
-    <h1> Baked-spaghetti recipes</h1>
-        <img src="image.webp" alt="a baked spaghetti" title="baked spaghetti" width="500px" >
+    <h1> Baked-spaghetti</h1>
+    <img src="image.webp" alt="a baked spaghetti" title="baked spaghetti" width="500px" >
+    <h2>DESCRIPTION</h2>
     <p>This recipe is quick an easy to make</p>
 
-    <p>ingredients</p>
+    <h2>INGREDIENTS</h2>
     <P>    1 lb. ground beef, browned and drained of fat
         1 lb. cooked and drained spaghetti noodles
         1 quart jar Kitchen Kettle Original Marinara Sauce
@@ -19,23 +20,24 @@
         1 - 1 1/2 c. grated Cheddar Cheese
         Parmesan Cheese
         Italian Seasoning</P>
+        <h2>STEPS FOR PREPARATION</h2>
+    <p>Combine sauce and cooked ground beef in a bowl and set aside for layering. Place cooked spaghetti in a bowl so it is also ready for layering.
+         Gather remaining ingredients and prepare a 2 qt. casserole dish by greasing bottom and sides.
 
-        <p>Combine sauce and cooked ground beef in a bowl and set aside for layering. Place cooked spaghetti in a bowl so it is also ready for layering. Gather remaining ingredients and prepare a 2 qt. casserole dish by greasing bottom and sides.
-
-            In greased 2 quart casserole, layer in the following order:
-            1. half of cooked spaghetti noodles.
-            2. Sprinkle to taste with Italian seasonings.
-            3. Place 4 slices of American cheese on top
-            4. Place 1/2 - 3/4 c. Cheddar cheese over top of American.
-            5. Sprinkle with Parmesan cheese.
-            6. Place half of meat sauce on top of cheese.
-            7. Repeat.
-            Sprinkle Parmesan cheese on top. Bake at 350 degrees for 30 minutes or until bubbly.
+            In greased 2 quart casserole, layer in the following order: </p>
+        <ol>
+            <li> half of cooked spaghetti noodles.</li>
+            <li> Sprinkle to taste with Italian seasonings.</li>
+            <li> Place 4 slices of American cheese on top</li>
+            <li> Place 1/2 - 3/4 c. Cheddar cheese over top of American.</li>
+            <li> Sprinkle with Parmesan cheese.</li>
+            <li> Place half of meat sauce on top of cheese.</li>
+            <li> Repeat.</li>
+        </ol>
+            <p> Sprinkle Parmesan cheese on top. Bake at 350 degrees for 30 minutes or until bubbly.
             
-            This freezes very well. Remove from freezer and thaw completely before baking. Add an additional 15 minutes to the baking time to reheat casserole thoroughly.
-            
-            A tip for preparation:
-            Buy twice the ingredients that you need. Prepare twice the amount of meat sauce and spaghetti noodles. Make sure you keep the noodles separate from the sauce. You’ll have 2 meals for the work of 1!
-        </p>
+            This freezes very well. Remove from freezer and thaw completely before baking. Add an additional 15 minutes to the baking time to 
+            reheat casserole thoroughly.
+            <strong>FOOD IS READY!</strong></p>
     </body>
 </html>
