--- a/recipes/nectarine.html
+++ b/recipes/nectarine.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <img src="nectarine-sunshine-juice.webp" alt="ss">
-   <p>2 large nectarines, pitted and quartered
-    1 banana, cut into pieces and frozen
-    1 large orange, peeled and quartered
-    1 cup vanilla yogurt
-    1 cup orange juice
-    1 tablespoon honey </p> 
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width>, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>NECTARINE SUNSHINE JUICE</h1>
+        <img src="nectarine-sunshine-juice.webp" alt="ss">
+        <h2>DESCRIPTION</h2>
 
-    <p>Place the nectarines, frozen banana chunks, orange, vanilla yogurt, orange juice, and honey into a blender, and blend until smooth.
-
-    </p>
-
-</body>
+        <h2>INGREDIENTS</h2>
+        <ul>
+            <li> 2 large nectarines, pitted and quartered </li></li>
+            <li> 1 banana, cut into pieces and frozen</li>
+            <li> 1 large orange, peeled and quartered</li>
+            <li> 1 cup vanilla yogurt</li>
+            <li> 1 cup orange juice</li>
+            <li> 1 tablespoon honey</li>
+        </ul> 
+        <h2>STEPS FOR PREPARATION</h2>
+        <p>Place the nectarines, frozen banana chunks, orange, vanilla yogurt, orange juice, and honey into a blender, and blend until smooth.</p>
+    </body>
 </html>
