--- a/recipes/rice.html
+++ b/recipes/rice.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <img src="smoked-sausage-and-cauliflower-rice.webp" alt="vv">
-    <p>3 tablespoons vegetable oil, divided
-        1 (12 ounce) package Hillshire Farm® Rope Smoked Sausage, cut into 1/2" coins
-        4 cups small broccoli florets
-        1 medium red bell pepper, cut into strips
-        2 large eggs, lightly beaten
-        1 (12 ounce) package frozen riced cauliflower
-        ¼ cup reduced-sodium soy sauce
-        1 tablespoon toasted sesame oil
-        ½ teaspoon granulated sugar
-        ½ teaspoon black pepper
-        2 tablespoons chopped cilantro </p>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>SMOKED SAUSAGE AND CAULIFLOWER RICE</h1>>
+        <img src="smoked-sausage-and-cauliflower-rice.webp" alt="vv">
+        <h2>DESCRIPTION</h2>
 
-        <p>In a large nonstick skillet, heat 1 tablespoon of the oil over medium-high. Add sausage; cook about 3 minutes, stirring occasionally, until lightly browned. Add broccoli and bell pepper; cook 5-6 minutes, stirring occasionally, until broccoli is bright green and slightly tender. Remove mixture to a plate.
-            Step 2
-            
-            Wipe skillet clean-careful, may be hot-reduce heat to medium, and add 1 tablespoon oil. Add eggs. Cook 2-3 minutes until set, stirring once or twice. Transfer to a cutting board and cut into 1/2-inch pieces.
-            Step 3
-            
-            Return skillet to stove over medium-high. Add remaining 1 tablespoon oil. Add cauliflower; cook, undisturbed, until softened and lightly toasted, about 4 minutes. Remove from heat. Stir in soy sauce, sesame oil, sugar, pepper, sausage mixture, and egg. Divide among plates and top with cilantro.
+        <h2>INGREDIENTS</h2>
+        <ul>
+            <li>3 tablespoons vegetable oil, divided </li>
+            <li>1 (12 ounce) package Hillshire Farm® Rope Smoked Sausage, cut into 1/2" coins </li>
+            <li>4 cups small broccoli florets</li>
+            <li>1 medium red bell pepper, cut into strips</li>
+            <li>2 large eggs, lightly beaten</li>
+            <li>1 (12 ounce) package frozen riced cauliflower</li>
+            <li>¼ cup reduced-sodium soy sauce</li>
+            <li>1 tablespoon toasted sesame oil</li>
+            <li>½ teaspoon granulated sugar</li>
+            <li>½ teaspoon black pepper</li>
+            <li>2 tablespoons chopped cilantro </li>
+        </ul>
+            <h2>STEPS FOR PREPARATION</h2>
+            <p>
+            <ul>
+                <li> step 1 <br>
+                In a large nonstick skillet, heat 1 tablespoon of the oil over medium-high. Add sausage; cook about 3 minutes, stirring occasionally, until lightly browned. Add broccoli and bell pepper; cook 5-6 minutes, stirring occasionally, until broccoli is bright green and slightly tender. Remove mixture to a plate. <br></li>          
+                <li> Step 2<br>
+                Wipe skillet clean-careful, may be hot-reduce heat to medium, and add 1 tablespoon oil. Add eggs. Cook 2-3 minutes until set, stirring once or twice. Transfer to a cutting board and cut into 1/2-inch pieces.<br></li> 
+                <li> Step 3<br>
+                Return skillet to stove over medium-high. Add remaining 1 tablespoon oil. Add cauliflower; cook, undisturbed, until softened and lightly toasted, about 4 minutes. Remove from heat. Stir in soy sauce, sesame oil, sugar, pepper, sausage mixture, and egg. Divide among plates and top with cilantro.<br></li>
+              </ul>
             </p>
-</body>
+    </body>
 </html>
