Add description and final modification

--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li>
-                <a href="recipes/baked-spaghetti.html"> Baked-spaghetti</a>
-            </li>
-            <li>
-                <a href="recipes/nectarine.html"> nectarine sunshine juice</a>
-            </li>
-            <li>
-                <a href="recipes/rice.html">smoked sausage and cauliflower rice</a>
-            </li>
+            <li><a href="recipes/baked-spaghetti.html" title="baked spaghetti"> Baked-spaghetti</a></li>
+            <li><a href="recipes/nectarine.html" title="nectarine juice"> nectarine sunshine juice</a></li>
+            <li><a href="recipes/rice.html" title="cauliflower-rice recipes">smoked sausage and cauliflower rice</a></li>
         </ul>   
     </body>
 </html>
