--- a/recipes/baked-spaghetti.html
+++ b/recipes/baked-spaghetti.html
@@ -10,16 +10,18 @@
     <h1> Baked-spaghetti</h1>
     <img src="image.webp" alt="a baked spaghetti" title="baked spaghetti" width="500px" >
     <h2>DESCRIPTION</h2>
-    <p>This recipe is quick an easy to make</p>
+    <p>This recipe is quick and easy to make</p>
 
     <h2>INGREDIENTS</h2>
-    <P>    1 lb. ground beef, browned and drained of fat
-        1 lb. cooked and drained spaghetti noodles
-        1 quart jar Kitchen Kettle Original Marinara Sauce
-        8 slices American Cheese
-        1 - 1 1/2 c. grated Cheddar Cheese
-        Parmesan Cheese
-        Italian Seasoning</P>
+    <ul>  
+          <li>1 lb. ground beef, browned and drained of fat </li> </li> 
+          <li>1 lb. cooked and drained spaghetti noodles</li> 
+          <li>1 quart jar Kitchen Kettle Original Marinara Sauce</li> 
+          <li>8 slices American Cheese</li> 
+          <li>1 - 1 1/2 c. grated Cheddar Cheese</li> 
+          <li>Parmesan Cheese</li> 
+          <li>Italian Seasoning</li> 
+    </ul>
         <h2>STEPS FOR PREPARATION</h2>
     <p>Combine sauce and cooked ground beef in a bowl and set aside for layering. Place cooked spaghetti in a bowl so it is also ready for layering.
          Gather remaining ingredients and prepare a 2 qt. casserole dish by greasing bottom and sides.
