--- a/recipes/rice.html
+++ b/recipes/rice.html
@@ -10,7 +10,7 @@
         <h1>SMOKED SAUSAGE AND CAULIFLOWER RICE</h1>>
         <img src="smoked-sausage-and-cauliflower-rice.webp" alt="vv">
         <h2>DESCRIPTION</h2>
-
+         A special fragrant rice made with cauliflower and smoked-sausage.
         <h2>INGREDIENTS</h2>
         <ul>
             <li>3 tablespoons vegetable oil, divided </li>
@@ -27,14 +27,14 @@
         </ul>
             <h2>STEPS FOR PREPARATION</h2>
             <p>
-            <ul>
+            <ol>
                 <li> step 1 <br>
                 In a large nonstick skillet, heat 1 tablespoon of the oil over medium-high. Add sausage; cook about 3 minutes, stirring occasionally, until lightly browned. Add broccoli and bell pepper; cook 5-6 minutes, stirring occasionally, until broccoli is bright green and slightly tender. Remove mixture to a plate. <br></li>          
                 <li> Step 2<br>
                 Wipe skillet clean-careful, may be hot-reduce heat to medium, and add 1 tablespoon oil. Add eggs. Cook 2-3 minutes until set, stirring once or twice. Transfer to a cutting board and cut into 1/2-inch pieces.<br></li> 
                 <li> Step 3<br>
                 Return skillet to stove over medium-high. Add remaining 1 tablespoon oil. Add cauliflower; cook, undisturbed, until softened and lightly toasted, about 4 minutes. Remove from heat. Stir in soy sauce, sesame oil, sugar, pepper, sausage mixture, and egg. Divide among plates and top with cilantro.<br></li>
-              </ul>
+              </ol>
             </p>
     </body>
 </html>
