--- a/recipes/nectarine.html
+++ b/recipes/nectarine.html
@@ -10,7 +10,7 @@
         <h1>NECTARINE SUNSHINE JUICE</h1>
         <img src="nectarine-sunshine-juice.webp" alt="ss">
         <h2>DESCRIPTION</h2>
-
+           <p> A special smoothy juice prepared for drinking early morning </p>
         <h2>INGREDIENTS</h2>
         <ul>
             <li> 2 large nectarines, pitted and quartered </li></li>
